--- a/index.html
+++ b/index.html
@@ -1,10 +1,118 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Color Table</title>
+        <style>
+          .first{color:white;Background-color:black}
+          .white{background-color:white}
+          .black{background-color:black}
+          .third{color:grey}
+          .grey{background-color:grey}
+          .fourth{color:lightgrey}
+          .lightgrey{background-color:lightgrey}
+          .Fifth{color:red}
+          .red{background-color:red}
+          .sisx{color:DarkRed}
+          .darkred{background-color:darkred}
+          .sev{color:Green}
+          .green{background-color:green}
+          .eight{color:DarkGreen}
+          .DarkGreen{background-color:DarkGreen}
+          .ninth{color:blue}
+          .blue{background-color:blue}
+          .tenth{color:DarkBlue}
+          .darkblue{background-color:darkblue}
+          .pinkred{color:#ff3939}
+          .last{background-color:#ff3939}
+          </style>
+
     </head>
     
     <body>
-	
+      <table border="1">
+        <tr>
+          <th>Color</th>
+          <th>Background</th>
+          <th>Hex Value</th>
+          <th>RGB</th>
+        </tr>
+
+        <tr class="first">
+          <td>White</td>
+          <td class="white"></td>
+          <td>#FFFFFF</td>
+          <td>RGB (255,255,255)</td>
+        </tr>
+
+        <tr>
+          <td>Black</td>
+          <td class="black"></td>
+          <td>#000000</td>
+          <td>RGB (0,0,0)</td>
+        </tr>
+
+        <tr class="third">
+          <td>Grey</td>
+          <td class="grey"></td>
+          <td>#808080</td>
+          <td>RGB (128,128,128)</td>
+        </tr>
+
+        <tr class="fourth">
+          <td>LightGrey</td>
+          <td class="lightgrey"></td>
+          <td>#D3D3D3</td>
+          <td>RGB (211,211,211)</td>
+        </tr>
+
+        <tr class="Fifth">
+          <td>Red</td>
+          <td class="red"></td>
+          <td>#FF0000</td>
+          <td>RGB (255,0,0)</td>
+        </tr>
+
+        <tr class="sisx">
+          <td>DarkRed</td>
+          <td class="darkred"></td>
+          <td>#8B0000</td>
+          <td>RGB (139,0,0)</td>
+        </tr>
+
+        <tr class="sev">
+          <td>Green</td>
+          <td class="green"></td>
+          <td>#008000</td>
+          <td>RGB (0,128,0)</td>
+        </tr>
+
+        <tr class="eight">
+          <td>DarkGreen</td>
+          <td class="DarkGreen"></td>
+          <td>#006400</td>
+          <td>RGB (0,100,0)</td>
+        </tr>
+
+        <tr class="ninth">
+          <td>Blue</td>
+          <td class="blue"</td>
+          <td>#0000FF</td>
+          <td>RGB (0,0,255)</td>
+        </tr>
+
+        <tr class="tenth">
+          <td>DarkBlue</td>
+          <td class="darkblue"></td>
+          <td>#00008B</td>
+          <td>RGB (0,0,139)</td>
+        </tr>
+
+        <tr class="pinkred">
+          <td>pinkred</td>
+          <td class="last"></td>
+          <td>#FF3939</td>
+          <td>RGB (255,57,57)</td>
+          </tr>
+
     </body>
 </html>
